[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/BoardSpace.gd" type="Script" id=1]
[ext_resource path="res://Sprites/empty_tile_64x64.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="BoardSpace" type="Node2D"]

script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="empty_tile_64x64" type="Sprite" parent="Area2D"]

texture = ExtResource( 2 )
vframes = 2
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="Area2D"]

visible = false
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]


